[tool.poetry]
name = "lh-shopping-demo"
version = "0.1.0"
description = ""
authors = ["Eduwer Camacaro <eduwerc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
littlehorse-client = "^0.11.2"
typing_extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
